--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -62,6 +62,7 @@
     <script src="/js/phone-validations/natural-insured-phone.js"></script>
     <script src="/js/phone-validations/natural-insured-mobile.js"></script>
     <script src="/js/phone-validations/natural-insured-emergency.js"></script>
+    <script src="/js/phone-validations/legal-insured-contact.js"></script>
     <script src="/js/phone-validations/legal-insured-phone.js"></script>
     <script src="/js/phone-validations/legal-insured-optional.js"></script>
     <script src="/js/phone-validations/legal-insured-mobile.js"></script>
