--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -80,76 +80,6 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Agente</label>
-                                        <div class="col-sm-9">
-                                            <select class="form-control" name="nombre_com_agente_propio" required>
-                                                <option value="">Seleccione *</option>
-                                                <% ownAgents.forEach((ownAgent) => { %>
-                                                    <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
-                                                <% }); %>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
-                                        <div class="col-sm-9">
-                                            <textarea 
-                                                name="direccion_asegurado_per_jur"
-                                                id="direccion_asegurado_per_jur" 
-                                                placeholder="Dirección *" 
-                                                class="form-control"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                                                required
-                                            ></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="ibox">
-                                <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Celular</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="tel"
-                                                name="celular_asegurado_per_jur"
-                                                id="celular_asegurado_per_jur" 
-                                                placeholder="Celular *" 
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="active-input-1">
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Persona Contacto</label>
-                                            <div class="col-sm-9">
-                                                <input 
-                                                    type="text"
-                                                    name="nombre_contacto_per_jur"
-                                                    id="nombre_contacto_per_jur" 
-                                                    placeholder="Persona Contacto de Empresa"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
-                                                    class="form-control"
-                                                >
-                                            </div>
-                                        </div>
-                                        <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cargo</label>
-                                            <div class="col-sm-9">
-                                                <input 
-                                                    type="text"
-                                                    name="cargo_contacto_per_jur"
-                                                    id="cargo_contacto_per_jur" 
-                                                    placeholder="Cargo de Persona Contacto de Empresa"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
-                                                    class="form-control"
-                                                >
-                                            </div>
-                                        </div>
-                                        <div class="hr-line-dashed"></div>
-                                    </div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Email</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -178,7 +108,103 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="direccion_asegurado_per_jur"
+                                                id="direccion_asegurado_per_jur" 
+                                                placeholder="Dirección *" 
+                                                class="form-control"
+                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                required
+                                            ></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="ibox">
+                                <div class="form-control">
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Agente</label>
+                                        <div class="col-sm-9">
+                                            <select class="form-control" name="nombre_com_agente_propio" required>
+                                                <option value="">Seleccione *</option>
+                                                <% ownAgents.forEach((ownAgent) => { %>
+                                                    <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
+                                                <% }); %>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Celular</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="tel"
+                                                name="celular_asegurado_per_jur"
+                                                id="celular_asegurado_per_jur" 
+                                                placeholder="Celular *" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="active-input-1">
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Persona Contacto</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="text"
+                                                    name="nombre_contacto_per_jur"
+                                                    id="nombre_contacto_per_jur" 
+                                                    placeholder="Nombre de Persona Contacto de Empresa"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cargo</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="text"
+                                                    name="cargo_contacto_per_jur"
+                                                    id="cargo_contacto_per_jur" 
+                                                    placeholder="Cargo de Persona Contacto de Empresa"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);" 
+                                                    class="form-control"
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Celular</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="tel"
+                                                    name="celular_contacto_per_jur"
+                                                    id="celular_contacto_per_jur" 
+                                                    placeholder="Celular de Persona Contacto de Empresa" 
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Email</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="email" 
+                                                    name="correo_contacto_per_jur"
+                                                    id="correo_contacto_per_jur"
+                                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                                                    placeholder="Email de Persona Contacto de Empresa"
+                                                    class="form-control" 
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="hidden"
@@ -191,6 +217,7 @@
                                     </br>
                                     </br>
                                     </br>
+                                    </div>
                                 </div>
                             </div>
                         </div>
